feat: バージョンアップとテストスイートの追加
- package.jsonとpackage-lock.jsonのバージョンを1.2.0に更新
- 単体テスト用のスクリプトを追加し、テストの実行方法を明確化
- FactoryParserサービスのテストを追加し、ファクトリとトレイトの解析機能を検証
- 各モデル（Factory、Trait、Location）の単体テストを実装し、機能の正確性を確認
- CacheManagerサービスのテストを追加し、キャッシュ機能の動作を検証
- 正規表現パターンのテストを追加し、ファクトリとトレイトの定義を正確に検出できることを確認

これにより、テストカバレッジが向上し、コードの信頼性が強化される。

--- a/package.json
+++ b/package.json
@@ -72,6 +72,9 @@
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
+    "test:unit": "node ./out/test/runUnitTests.js",
+    "test:integration": "node ./out/test/runTest.js",
+    "test:all": "npm run test:unit && npm run test:integration",
     "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
