--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -8,8 +8,9 @@ on:
 
 jobs:
   test:
-    name: Test
+    name: Integration Test
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
 
     strategy:
       matrix:
@@ -28,14 +29,22 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Compile TypeScript
+        run: npm run compile
+
+      - name: Install xvfb (Linux only)
+        if: runner.os == 'Linux'
+        run: sudo apt-get update && sudo apt-get install -y xvfb
+
       - name: Run tests (Linux)
         if: runner.os == 'Linux'
-        run: xvfb-run -a npm test:integration
+        run: xvfb-run -a npm run test:integration
         env:
           CI: true
+          DISPLAY: ":99"
 
       - name: Run tests (macOS and Windows)
         if: runner.os != 'Linux'
-        run: npm test:integration
+        run: npm run test:integration
         env:
           CI: true
