--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -8,8 +8,9 @@ on:
 
 jobs:
   test:
-    name: Test
+    name: Unit Test
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
 
     strategy:
       matrix:
@@ -28,14 +29,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Compile TypeScript
+        run: npm run compile
+
       - name: Run tests (Linux)
         if: runner.os == 'Linux'
-        run: xvfb-run -a npm test:unit
+        run: xvfb-run -a npm run test:unit
         env:
           CI: true
 
       - name: Run tests (macOS and Windows)
         if: runner.os != 'Linux'
-        run: npm test:unit
+        run: npm run test:unit
         env:
           CI: true
